[gd_scene load_steps=5 format=3 uid="uid://yyjcuekla8dc"]

[ext_resource type="Script" path="res://scripts/explanation.gd" id="1_04cib"]
[ext_resource type="Theme" uid="uid://dupann3qkyje3" path="res://themes/pixel_98.tres" id="1_6k1dr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4dmv"]
bg_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xae8e"]

[node name="explanation" type="Node2D"]
script = ExtResource("1_04cib")

[node name="BGPanel" type="Panel" parent="."]
offset_right = 1287.0
offset_bottom = 722.0

[node name="Panel1" type="Panel" parent="BGPanel"]
layout_mode = 0
offset_left = 225.0
offset_top = 40.0
offset_right = 541.0
offset_bottom = 210.0
theme = ExtResource("1_6k1dr")

[node name="Label1" type="Label" parent="BGPanel/Panel1"]
layout_mode = 0
offset_left = 18.0
offset_top = 23.0
offset_right = 298.0
offset_bottom = 124.0
text = "Read the objectives here...
Then try and complete them

You can always hide the panel"
autowrap_mode = 2

[node name="continueButton1" type="Button" parent="BGPanel/Panel1"]
layout_mode = 0
offset_left = 17.0
offset_top = 134.0
offset_right = 145.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_r4dmv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xae8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xae8e")
text = "Continue"

[node name="skipButton" type="Button" parent="BGPanel/Panel1"]
layout_mode = 0
offset_left = 169.0
offset_top = 134.0
offset_right = 297.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_r4dmv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xae8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xae8e")
text = "Skip Tutorial"

[node name="Panel2" type="Panel" parent="BGPanel"]
visible = false
layout_mode = 0
offset_left = 160.0
offset_top = 398.0
offset_right = 476.0
offset_bottom = 568.0
theme = ExtResource("1_6k1dr")

[node name="continueButton2" type="Button" parent="BGPanel/Panel2"]
layout_mode = 0
offset_left = 79.0
offset_top = 135.0
offset_right = 242.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_r4dmv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xae8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xae8e")
text = "Got it!"

[node name="Label2" type="Label" parent="BGPanel/Panel2"]
layout_mode = 0
offset_left = 18.0
offset_top = 23.0
offset_right = 298.0
offset_bottom = 124.0
text = "Keep in mind, you dont have infinite cables. Be careful not to waste your resources"
autowrap_mode = 2

[node name="Panel3" type="Panel" parent="BGPanel"]
visible = false
layout_mode = 0
offset_left = 436.0
offset_top = 162.0
offset_right = 752.0
offset_bottom = 332.0
theme = ExtResource("1_6k1dr")

[node name="continueButton3" type="Button" parent="BGPanel/Panel3"]
layout_mode = 0
offset_left = 79.0
offset_top = 135.0
offset_right = 242.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_r4dmv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xae8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xae8e")
text = "Got it!"

[node name="Label3" type="Label" parent="BGPanel/Panel3"]
layout_mode = 0
offset_left = 18.0
offset_top = 23.0
offset_right = 298.0
offset_bottom = 124.0
text = "Cables also cannot go past a certain length. Routers should connect with closer routers"
autowrap_mode = 2

[node name="Panel4" type="Panel" parent="BGPanel"]
visible = false
layout_mode = 0
offset_left = 899.0
offset_top = 475.0
offset_right = 1215.0
offset_bottom = 645.0
theme = ExtResource("1_6k1dr")

[node name="continueButton4" type="Button" parent="BGPanel/Panel4"]
layout_mode = 0
offset_left = 79.0
offset_top = 135.0
offset_right = 242.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_r4dmv")
theme_override_styles/hover = SubResource("StyleBoxFlat_xae8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xae8e")
text = "I'm ready!"

[node name="Label4" type="Label" parent="BGPanel/Panel4"]
layout_mode = 0
offset_left = 18.0
offset_top = 23.0
offset_right = 298.0
offset_bottom = 124.0
text = "A more in-depth look of Routers and how they work can be found here!"
autowrap_mode = 2

[connection signal="pressed" from="BGPanel/Panel1/continueButton1" to="." method="_on_continue_button_1_pressed"]
[connection signal="pressed" from="BGPanel/Panel1/skipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="BGPanel/Panel2/continueButton2" to="." method="_on_continue_button_2_pressed"]
[connection signal="pressed" from="BGPanel/Panel3/continueButton3" to="." method="_on_continue_button_3_pressed"]
[connection signal="pressed" from="BGPanel/Panel4/continueButton4" to="." method="_on_continue_button_4_pressed"]
